do not transform script resources

--- a/scm-webapp/src/main/webapp/index.mustache
+++ b/scm-webapp/src/main/webapp/index.mustache
@@ -159,7 +159,7 @@
     
     <!-- plugins -->
     {{#scripts}}
-    <script type="text/javascript" src="plugins/resources/js/{{.}}"></script>
+    <script type="text/javascript" src="plugins/resources/js/{{name}}"></script>
     {{/scripts}}
     
     {{#nonDefaultLocale}}
