--- a/scm-webapp/src/main/webapp/index.mustache
+++ b/scm-webapp/src/main/webapp/index.mustache
@@ -62,6 +62,7 @@
     <script type="text/javascript" src="resources/extjs/adapter/ext/ext-base.js"></script>
     <script type="text/javascript" src="resources/extjs/ext-all-debug.js"></script>
     <script type="text/javascript" src="resources/extjs/util/CheckColumn.js"></script>
+    <script type="text/javascript" src="resources/extjs/util/FileUploadField.js"></script>
 
     <!-- sonia.global -->
     <script type="text/javascript" src="resources/js/sonia.global.js"></script>
@@ -149,6 +150,7 @@
 
     <!-- sonia.plugin -->
     <script type="text/javascript" src="resources/js/plugin/sonia.plugin.js"></script>
+    <script type="text/javascript" src="resources/js/plugin/sonia.plugin.uploadform.js"></script>
     <script type="text/javascript" src="resources/js/plugin/sonia.plugin.center.js"></script>
     <script type="text/javascript" src="resources/js/plugin/sonia.plugin.store.js"></script>
     <script type="text/javascript" src="resources/js/plugin/sonia.plugin.grid.js"></script>
