--- a/scm-webapp/src/main/webapp/resources/css/style.css
+++ b/scm-webapp/src/main/webapp/resources/css/style.css
@@ -202,3 +202,35 @@ div.noscript-container h1 {
   color: #D20005;
   border-bottom: 1px solid #AFAFAF;
 }
+
+/*
+ * FileUploadField component styles
+ */
+.x-form-file-wrap {
+  position: relative;
+  height: 22px;
+}
+.x-form-file-wrap .x-form-file {
+	position: absolute;
+	right: 0;
+	-moz-opacity: 0;
+	filter:alpha(opacity: 0);
+	opacity: 0;
+	z-index: 2;
+  height: 22px;
+}
+.x-form-file-wrap .x-form-file-btn {
+	position: absolute;
+	right: 0;
+	z-index: 1;
+}
+.x-form-file-wrap .x-form-file-text {
+  position: absolute;
+  left: 0;
+  z-index: 3;
+  color: #777;
+}
+
+.upload-icon {
+  background: url('../images/add.png') no-repeat 0 0 !important;
+}
