store expanded/collapsed state of groupingviews across sessions

--- a/scm-webapp/src/main/webapp/index.mustache
+++ b/scm-webapp/src/main/webapp/index.mustache
@@ -79,6 +79,7 @@
     <script type="text/javascript" src="resources/js/override/ext.data.store.js"></script>
     <script type="text/javascript" src="resources/js/override/ext.grid.columnmodel.js"></script>
     <script type="text/javascript" src="resources/js/override/ext.grid.gridpanel.js"></script>
+    <script type="text/javascript" src="resources/js/override/ext.grid.groupingview.js"></script>
 
     <!-- sonia.navigation -->
     <script type="text/javascript" src="resources/js/navigation/sonia.navigation.js"></script>
