--- a/scm-plugin-backend/src/main/webapp/template/header.html
+++ b/scm-plugin-backend/src/main/webapp/template/header.html
@@ -37,9 +37,13 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <title>SCM-Manager Plugin-Backend</title>
-    <link rel="stylesheet" type="text/css" media="all" href="${contextPath}/template/css/style.css" />
+    <link rel="stylesheet" type="text/css" media="all" href="http://www.scm-manager.org/wp-content/themes/portfolio-press/style.css" />
     <link rel="stylesheet" type="text/css" media="all" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/themes/ui-lightness/jquery-ui.css" />
     <link rel="stylesheet" type="text/css" media="all" href="${contextPath}/template/fancybox/jquery.fancybox-1.3.4.css" />
+    <link rel="stylesheet" type="text/css" media="all" href="${contextPath}/template/css/custom.css" />
+    <link rel="shortcut icon" href="http://www.scm-manager.org/wp-content/blogs.dir/2/files/2011/12/favicon_16x16px_transparent.png"/>
+    <link rel='stylesheet' id='portfoliopress_open_sans-css'  href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,600' type='text/css' media='screen' />
+    <link rel='stylesheet' id='portfoliopress_rokkitt-css'  href='http://fonts.googleapis.com/css?family=Rokkitt:400,700' type='text/css' media='screen' />
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.3/jquery.min.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
     <script type="text/javascript" src="${contextPath}/template/js/jquery.feed.js"></script>
@@ -70,23 +74,31 @@
         <div class="col-width">
           <hgroup id="logo">
             <h1 id="site-title">
-              <a href="${contextPath}/page/index.html">SCM-Manager Plugins</a>
+              <a href="http://www.scm-manager.org/" title="SCM-Manager" rel="home">
+                <img src="http://www.scm-manager.org/wp-content/blogs.dir/2/files/2012/10/scm-manager_logo_neg2.jpg" alt="SCM-Manager" />
+              </a>
             </h1>
-            <h2 id="site-description">
-              The easiest way to share your Git, Mercurial and Subversion repositories over http.
-            </h2>
           </hgroup>
           <nav id="navigation">
             <h1 class="screen-reader-text">Main menu</h1>
             <div class="skip-link screen-reader-text"><a title="Skip to content" href="#content">Skip to content</a></div>
 
             <div class="menu">
-              <ul>
-                <li class="current_page_item">
-                  <a title="Home" href="http://www.scm-manager.org/">Home</a>
+              <ul class="sf-js-enabled">
+                <li class="page_item">
+                  <a href="http://www.scm-manager.org/" title="Home">Home</a>
                 </li>
-                <li class="page_item page-item-36">
-                  <a title="News" href="http://www.scm-manager.org/news/">News</a>
+                <li class="page_item">
+                  <a href="http://www.scm-manager.org/news/">News</a>
+                </li>
+                <li class="current_page_item">
+                  <a href="http://plugins.scm-manager.org/scm-plugin-backend/page/index.html">Plugins</a>
+                </li>
+                <li class="page_item">
+                  <a href="http://www.scm-manager.org/screenshots/">Screenshots</a>
+                </li>
+                <li class="page_item">
+                  <a href="http://www.scm-manager.org/videos/">Videos</a>
                 </li>
               </ul>
             </div>
