--- a/scm-webapp/src/main/webapp/index.mustache
+++ b/scm-webapp/src/main/webapp/index.mustache
@@ -54,6 +54,9 @@
     <link rel="stylesheet" type="text/css" href="resources/extjs/resources/css/ext-all.css" />
     <link rel="stylesheet" type="text/css" href="resources/extjs/resources/css/xtheme-scmslate.css" />
     <link rel="stylesheet" type="text/css" href="resources/css/style.css" />
+    
+    <!-- moment.js -->
+    <script type="text/javascript" src="resources/moment/moment.js"></script>
 
     <!-- core overrides -->
     <script type="text/javascript" src="resources/js/sonia.core.js"></script>
