added support for german time ago

--- a/scm-webapp/src/main/webapp/index.mustache
+++ b/scm-webapp/src/main/webapp/index.mustache
@@ -169,6 +169,7 @@
     {{/scripts}}
     
     {{#nonDefaultLocale}}
+    <script type="text/javascript" src="resources/moment/lang/{{country}}.js"></script>
     <script type="text/javascript" src="resources/extjs/i18n/ext-lang-{{country}}.js"></script>
     <script type="text/javascript" src="resources/js/i18n/{{country}}.js"></script>
     {{/nonDefaultLocale}}
