use new image urls

--- a/scm-plugin-backend/src/main/webapp/template/header.html
+++ b/scm-plugin-backend/src/main/webapp/template/header.html
@@ -41,7 +41,7 @@
     <link rel="stylesheet" type="text/css" media="all" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/themes/ui-lightness/jquery-ui.css" />
     <link rel="stylesheet" type="text/css" media="all" href="${contextPath}/template/fancybox/jquery.fancybox-1.3.4.css" />
     <link rel="stylesheet" type="text/css" media="all" href="${contextPath}/template/css/custom.css" />
-    <link rel="shortcut icon" href="http://www.scm-manager.org/wp-content/blogs.dir/2/files/2011/12/favicon_16x16px_transparent.png"/>
+    <link rel="shortcut icon" href="http://www.scm-manager.org/wp-content/uploads/2011/12/favicon_16x16px_transparent.png"/>
     <link rel='stylesheet' id='portfoliopress_open_sans-css'  href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,600' type='text/css' media='screen' />
     <link rel='stylesheet' id='portfoliopress_rokkitt-css'  href='http://fonts.googleapis.com/css?family=Rokkitt:400,700' type='text/css' media='screen' />
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.3/jquery.min.js"></script>
@@ -75,7 +75,7 @@
           <hgroup id="logo">
             <h1 id="site-title">
               <a href="http://www.scm-manager.org/" title="SCM-Manager" rel="home">
-                <img src="http://www.scm-manager.org/wp-content/blogs.dir/2/files/2012/10/scm-manager_logo_neg2.jpg" alt="SCM-Manager" />
+                <img src="http://www.scm-manager.org:81/wp-content/uploads/2012/10/scm-manager_logo_neg2-300x74.jpg" alt="SCM-Manager" />
               </a>
             </h1>
           </hgroup>
