remove wrong port

--- a/scm-plugin-backend/src/main/webapp/template/header.html
+++ b/scm-plugin-backend/src/main/webapp/template/header.html
@@ -75,7 +75,7 @@
           <hgroup id="logo">
             <h1 id="site-title">
               <a href="http://www.scm-manager.org/" title="SCM-Manager" rel="home">
-                <img src="http://www.scm-manager.org:81/wp-content/uploads/2012/10/scm-manager_logo_neg2-300x74.jpg" alt="SCM-Manager" />
+                <img src="http://www.scm-manager.org/wp-content/uploads/2012/10/scm-manager_logo_neg2-300x74.jpg" alt="SCM-Manager" />
               </a>
             </h1>
           </hgroup>
