start implementation of authentication and authorization

--- a/scm-plugin-backend/src/main/webapp/WEB-INF/ftl/template/header.html
+++ b/scm-plugin-backend/src/main/webapp/WEB-INF/ftl/template/header.html
@@ -113,6 +113,9 @@
                 <header class="entry-header">
                   <h1 class="entry-title">${title}</h1>
                 </header>
+                <#if error??>
+                  <div style="color: red">${error}</div>
+                </#if>
                 <div class="entry-content">
                   <!-- content begin -->
                   
