use localStorage to store state of the user interface

--- a/scm-webapp/src/main/webapp/index.mustache
+++ b/scm-webapp/src/main/webapp/index.mustache
@@ -83,6 +83,10 @@
     <script type="text/javascript" src="resources/js/override/ext.grid.columnmodel.js"></script>
     <script type="text/javascript" src="resources/js/override/ext.grid.gridpanel.js"></script>
     <script type="text/javascript" src="resources/js/override/ext.grid.groupingview.js"></script>
+    
+    <!-- sonia.state -->
+    <script type="text/javascript" src="resources/js/uistate/sonia.uistate.js"></script>
+    <script type="text/javascript" src="resources/js/uistate/sonia.uistate.webstorageprovider.js"></script>
 
     <!-- sonia.navigation -->
     <script type="text/javascript" src="resources/js/navigation/sonia.navigation.js"></script>
