--- a/scm-webapp/src/main/webapp/index.mustache
+++ b/scm-webapp/src/main/webapp/index.mustache
@@ -143,6 +143,10 @@
     <script type="text/javascript" src="resources/js/group/sonia.group.memberformpanel.js"></script>
     <script type="text/javascript" src="resources/js/group/sonia.group.panel.js"></script>
 
+    <!-- sonia.security -->
+    <script type="text/javascript" src="resources/js/security/sonia.security.js"></script>
+    <script type="text/javascript" src="resources/js/security/sonia.security.permissionspanel.js"></script>
+    
     <!-- sonia.config -->
     <script type="text/javascript" src="resources/js/config/sonia.config.js"></script>
     <script type="text/javascript" src="resources/js/config/sonia.config.configpanel.js"></script>
