added missing viewport meta tag

--- a/scm-plugin-backend/src/main/webapp/WEB-INF/ftl/template/header.html
+++ b/scm-plugin-backend/src/main/webapp/WEB-INF/ftl/template/header.html
@@ -34,7 +34,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width" />
     
     <title>SCM-Manager Plugin-Backend</title>
     <link rel="stylesheet" type="text/css" media="all" href="http://www.scm-manager.org/wp-content/themes/portfolio-press/style.css" />
