--- a/scm-plugin-backend/src/main/webapp/WEB-INF/ftl/template/footer.html
+++ b/scm-plugin-backend/src/main/webapp/WEB-INF/ftl/template/footer.html
@@ -83,5 +83,9 @@
         </div>
       </footer>
     </div>
+    
+    <script type='text/javascript' src='http://www.scm-manager.org/wp-content/themes/portfolio-press/js/superfish.js?ver=3.5.1'></script>
+    <script type='text/javascript' src='http://www.scm-manager.org/wp-content/themes/portfolio-press/js/theme.js?ver=3.5.1'></script>
+    
   </body>
 </html>
