fix menu on small devices

--- a/scm-plugin-backend/src/main/webapp/WEB-INF/ftl/template/header.html
+++ b/scm-plugin-backend/src/main/webapp/WEB-INF/ftl/template/header.html
@@ -82,7 +82,7 @@
             </h1>
           </hgroup>
           <nav id="navigation">
-            <h1 class="screen-reader-text">Main menu</h1>
+            <h3 class="menu-toggle">Menu</h3>
             <div class="skip-link screen-reader-text"><a title="Skip to content" href="#content">Skip to content</a></div>
 
             <div class="menu">
