improve main menu

--- a/scm-plugin-backend/src/main/webapp/WEB-INF/ftl/template/header.html
+++ b/scm-plugin-backend/src/main/webapp/WEB-INF/ftl/template/header.html
@@ -87,19 +87,19 @@
 
             <div class="menu">
               <ul class="sf-js-enabled">
-                <li class="page_item">
+                <li class="menu-item menu-item-type-post_type menu-item-object-page">
                   <a href="http://www.scm-manager.org/" title="Home">Home</a>
                 </li>
-                <li class="page_item">
+                <li class="menu-item menu-item-type-post_type menu-item-object-page">
                   <a href="http://www.scm-manager.org/news/">News</a>
                 </li>
-                <li class="current_page_item">
+                <li class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item current_page_item current_page_parent">
                   <a href="http://plugins.scm-manager.org/scm-plugin-backend/page/index.html">Plugins</a>
                 </li>
-                <li class="page_item">
+                <li class="menu-item menu-item-type-post_type menu-item-object-page">
                   <a href="http://www.scm-manager.org/screenshots/">Screenshots</a>
                 </li>
-                <li class="page_item">
+                <li class="menu-item menu-item-type-post_type menu-item-object-page">
                   <a href="http://www.scm-manager.org/videos/">Videos</a>
                 </li>
               </ul>
