added download button

--- a/scm-plugin-backend/src/main/webapp/WEB-INF/ftl/template/header.html
+++ b/scm-plugin-backend/src/main/webapp/WEB-INF/ftl/template/header.html
@@ -93,6 +93,9 @@
                 <li class="menu-item menu-item-type-post_type menu-item-object-page">
                   <a href="http://www.scm-manager.org/news/">News</a>
                 </li>
+                <li class="menu-item menu-item-type-post_type menu-item-object-page">
+                  <a href="http://www.scm-manager.org/download/">Download</a>
+                </li>
                 <li class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item current_page_item current_page_parent">
                   <a href="http://plugins.scm-manager.org/scm-plugin-backend/page/index.html">Plugins</a>
                 </li>
