use new download link

--- a/scm-plugin-backend/src/main/webapp/WEB-INF/ftl/template/footer.html
+++ b/scm-plugin-backend/src/main/webapp/WEB-INF/ftl/template/footer.html
@@ -8,7 +8,7 @@
                   <h3 class="widget-title">Links</h3>
                   <ul class="xoxo blogroll">
                     <li>
-                      <a href="https://bitbucket.org/sdorra/scm-manager/wiki/download" target="_blank">Download</a>
+                      <a href="http://www.scm-manager.org/download/">Download</a>
                     </li>
                     <li>
                       <a href="https://bitbucket.org/sdorra/scm-manager/issues?status=new&amp;status=open" target="_blank">Issue Tracker</a>
