--- a/scm-plugin-backend/src/main/webapp/WEB-INF/ftl/template/footer.html
+++ b/scm-plugin-backend/src/main/webapp/WEB-INF/ftl/template/footer.html
@@ -37,7 +37,7 @@
                   <h3 class="widget-title">Social</h3>
                   <div style="position: relative; display: block;" id="social4i">
                     <div style="float:left;margin-right: 8px;" class="socialicons">
-                      <div id="fb-root" style="float: left;"></div><script src="http://connect.facebook.net/en_US/all.js#appId=221636557882194&xfbml=1"></script><fb:like href="http://www.scm-manager.org" send="false" layout="box_count" width="52" show_faces="true" font=""></fb:like>
+                      <div id="fb-root" style="float: left;"></div><script src="https://connect.facebook.net/en_US/all.js#appId=221636557882194&xfbml=1"></script><fb:like href="http://www.scm-manager.org" send="false" layout="box_count" width="52" show_faces="true" font=""></fb:like>
                     </div>
                     <div style="float:left;margin-right: 8px;" class="socialicons">
                       <g:plusone size="tall" href="http://www.scm-manager.org"></g:plusone>
