--- a/scm-plugins/scm-svn-plugin/src/main/resources/sonia/scm/svn.index.mustache
+++ b/scm-plugins/scm-svn-plugin/src/main/resources/sonia/scm/svn.index.mustache
@@ -33,7 +33,7 @@
 
 <html>
   <head>
-    <title>SCM :: Manager - Subversion Repository</title>
+    <title>SCM :: Manager - Subversion Repository - {{name}}</title>
     <style type="text/css">
       body {
         background-color: #ffffff;
@@ -93,21 +93,35 @@
   </head>
   <body>
 
-    <h1>SCM :: Manager - Subversion Repository</h1>
+    <h1>SCM :: Manager - Subversion Repository - {{name}}</h1>
+    
+    <table>
+      <tbody>
+      {{#entries}}
+        <tr>
+          <td>
+            <a href="{{url}}">
+              {{name}}{{#directory}}/{{/directory}}
+            </a>
+          </td>
+        </tr>
+      {{/entries}}
+      </tbody>
+    </table>
     
     <h2>Notes</h2>
     
     <div>
       <p>
         This page is only a quick source view for subversion. 
-        The full source view is <a href="">here</a>.
+        The full source view is <a href="{{sourceViewLink}}">here</a>.
       </p>
       <ul>
         <li>
-          <a href="">Commits</a>
+          <a href="{{commitViewLink}}">Commits</a>
         </li>
         <li>
-          <a href="">Source</a>
+          <a href="{{sourceViewLink}}">Source</a>
         </li>
       </ul>
     </div>
