remove cancel button on login window if anonymous access is disabled, see issue  #396

--- a/scm-webapp/src/main/webapp/index.mustache
+++ b/scm-webapp/src/main/webapp/index.mustache
@@ -48,6 +48,9 @@
         locale: '{{locale}}',
         country: '{{country}}'
       };
+      var scmGlobalConfiguration = {
+        anonymousAccessEnabled: {{configuration.anonymousAccessEnabled}}
+      };
     </script>
 
     <!--compress-->
