display failed health checks in user interface

--- a/scm-webapp/src/main/webapp/index.mustache
+++ b/scm-webapp/src/main/webapp/index.mustache
@@ -131,6 +131,7 @@
     <script type="text/javascript" src="resources/js/repository/sonia.repository.importwindow.js"></script>
     <script type="text/javascript" src="resources/js/repository/sonia.repository.commitpanel.js"></script>
     <script type="text/javascript" src="resources/js/repository/sonia.repository.changesetpanel.js"></script>
+    <script type="text/javascript" src="resources/js/repository/sonia.repository.healthcheckfailure.js"></script>
 
     <!-- sonia.user -->
     <script type="text/javascript" src="resources/js/user/sonia.user.js"></script>
