--- a/scm-webapp/src/main/webapp/resources/css/style.css
+++ b/scm-webapp/src/main/webapp/resources/css/style.css
@@ -234,3 +234,7 @@ div.noscript-container h1 {
 .upload-icon {
   background: url('../images/add.png') no-repeat 0 0 !important;
 }
+
+.unhealthy {
+  color: red;
+}
