use schemaless urls to fix https

--- a/scm-plugin-backend/src/main/webapp/WEB-INF/ftl/template/footer.html
+++ b/scm-plugin-backend/src/main/webapp/WEB-INF/ftl/template/footer.html
@@ -8,7 +8,7 @@
                   <h3 class="widget-title">Links</h3>
                   <ul class="xoxo blogroll">
                     <li>
-                      <a href="http://www.scm-manager.org/download/">Download</a>
+                      <a href="//www.scm-manager.org/download/">Download</a>
                     </li>
                     <li>
                       <a href="https://bitbucket.org/sdorra/scm-manager/issues?status=new&amp;status=open" target="_blank">Issue Tracker</a>
@@ -78,7 +78,7 @@
                 <li class="widget-container widget_links">
                   <h3 class="widget-title">Build and test</h3>
                   <a href="https://scm-manager.ci.cloudbees.com/">
-                    <img alt="Cloudbees" src="http://static-www.cloudbees.com/images/badges/BuiltOnDEV.png">
+                    <img src="//web-static-cloudfront.s3.amazonaws.com/images/badges/BuiltOnDEV.png" alt="Cloudbees">
                   </a>
                 </li>
               </ul>
@@ -95,8 +95,8 @@
       </footer>
     </div>
     
-    <script type='text/javascript' src='http://www.scm-manager.org/wp-content/themes/portfolio-press/js/superfish.js?ver=3.5.1'></script>
-    <script type='text/javascript' src='http://www.scm-manager.org/wp-content/themes/portfolio-press/js/theme.js?ver=3.5.1'></script>
+    <script type='text/javascript' src='//www.scm-manager.org/wp-content/themes/portfolio-press/js/superfish.js?ver=3.9.1'></script>
+    <script type='text/javascript' src='//www.scm-manager.org/wp-content/themes/portfolio-press/js/theme.js?ver=3.9.1'></script>
     
   </body>
 </html>
