--- a/scm-plugin-backend/src/main/webapp/WEB-INF/ftl/template/header.html
+++ b/scm-plugin-backend/src/main/webapp/WEB-INF/ftl/template/header.html
@@ -38,13 +38,13 @@
     <meta name="viewport" content="width=device-width" />
     
     <title>SCM-Manager Plugin-Backend</title>
-    <link rel="stylesheet" type="text/css" media="all" href="http://www.scm-manager.org/wp-content/themes/portfolio-press/style.css" />
+    <link rel="stylesheet" type="text/css" media="all" href="//www.scm-manager.org/wp-content/themes/portfolio-press/style.css" />
     <link rel="stylesheet" type="text/css" media="all" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/themes/ui-lightness/jquery-ui.css" />
     <link rel="stylesheet" type="text/css" media="all" href="${contextPath}/template/fancybox/jquery.fancybox-1.3.4.css" />
     <link rel="stylesheet" type="text/css" media="all" href="${contextPath}/template/css/custom.css" />
-    <link rel="shortcut icon" href="http://www.scm-manager.org/wp-content/uploads/2011/12/favicon_16x16px_transparent.png"/>
-    <link rel='stylesheet' id='portfoliopress_open_sans-css'  href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,600' type='text/css' media='screen' />
-    <link rel='stylesheet' id='portfoliopress_rokkitt-css'  href='http://fonts.googleapis.com/css?family=Rokkitt:400,700' type='text/css' media='screen' />
+    <link rel="shortcut icon" href="//www.scm-manager.org/wp-content/uploads/2011/12/favicon_16x16px_transparent.png"/>
+    <link rel='stylesheet' id='portfoliopress_open_sans-css'  href='//fonts.googleapis.com/css?family=Open+Sans:400italic,400,600' type='text/css' media='screen' />
+    <link rel='stylesheet' id='portfoliopress_rokkitt-css'  href='//fonts.googleapis.com/css?family=Rokkitt:400,700' type='text/css' media='screen' />
     
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
@@ -88,22 +88,22 @@
             <div class="menu">
               <ul class="sf-js-enabled">
                 <li class="menu-item menu-item-type-post_type menu-item-object-page">
-                  <a href="http://www.scm-manager.org/" title="Home">Home</a>
+                  <a href="//www.scm-manager.org/" title="Home">Home</a>
                 </li>
                 <li class="menu-item menu-item-type-post_type menu-item-object-page">
-                  <a href="http://www.scm-manager.org/news/">News</a>
+                  <a href="//www.scm-manager.org/news/">News</a>
                 </li>
                 <li class="menu-item menu-item-type-post_type menu-item-object-page">
-                  <a href="http://www.scm-manager.org/download/">Download</a>
+                  <a href="//www.scm-manager.org/download/">Download</a>
                 </li>
                 <li class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item current_page_item current_page_parent">
-                  <a href="http://plugins.scm-manager.org/scm-plugin-backend/page/index.html">Plugins</a>
+                  <a href="//plugins.scm-manager.org/scm-plugin-backend/page/index.html">Plugins</a>
                 </li>
                 <li class="menu-item menu-item-type-post_type menu-item-object-page">
-                  <a href="http://www.scm-manager.org/screenshots/">Screenshots</a>
+                  <a href="//www.scm-manager.org/screenshots/">Screenshots</a>
                 </li>
                 <li class="menu-item menu-item-type-post_type menu-item-object-page">
-                  <a href="http://www.scm-manager.org/videos/">Videos</a>
+                  <a href="//www.scm-manager.org/videos/">Videos</a>
                 </li>
               </ul>
             </div>
