--- a/scm-plugin-backend/src/main/webapp/WEB-INF/ftl/template/header.html
+++ b/scm-plugin-backend/src/main/webapp/WEB-INF/ftl/template/header.html
@@ -76,8 +76,8 @@
         <div class="col-width">
           <hgroup id="logo">
             <h1 id="site-title">
-              <a href="http://www.scm-manager.org/" title="SCM-Manager" rel="home">
-                <img src="http://www.scm-manager.org/wp-content/uploads/2012/10/scm-manager_logo_neg2-300x74.jpg" alt="SCM-Manager" />
+              <a href="https://www.scm-manager.org/" title="SCM-Manager" rel="home">
+                <img src="//www.scm-manager.org/wp-content/uploads/2012/10/scm-manager_logo_neg2-300x74.jpg" alt="SCM-Manager" />
               </a>
             </h1>
           </hgroup>
