--- a/scm-webapp/src/main/webapp/index.mustache
+++ b/scm-webapp/src/main/webapp/index.mustache
@@ -77,6 +77,7 @@
     <!-- sonia.util -->
     <script type="text/javascript" src="resources/js/util/sonia.util.js"></script>
     <script type="text/javascript" src="resources/js/util/sonia.util.link.js"></script>
+    <script type="text/javascript" src="resources/js/util/sonia.util.tip.js"></script>
 
     <!-- sonia.override -->
     <script type="text/javascript" src="resources/js/override/ext.form.vtypes.js"></script>
