#873 added reusable components for branch and tag combo boxes

--- a/scm-webapp/src/main/webapp/index.mustache
+++ b/scm-webapp/src/main/webapp/index.mustache
@@ -115,6 +115,8 @@
 
     <!-- sonia.repository -->
     <script type="text/javascript" src="resources/js/repository/sonia.repository.js"></script>
+    <script type="text/javascript" src="resources/js/repository/sonia.repository.branchcombobox.js"></script>
+    <script type="text/javascript" src="resources/js/repository/sonia.repository.tagcombobox.js"></script>
     <script type="text/javascript" src="resources/js/repository/sonia.repository.grid.js"></script>
     <script type="text/javascript" src="resources/js/repository/sonia.repository.infopanel.js"></script>
     <script type="text/javascript" src="resources/js/repository/sonia.repository.extendedinfopanel.js"></script>
