remove no longer required sonia.scm.url package

--- a/scm-webapp/src/main/resources/templates/repository-root.mustache
+++ b/scm-webapp/src/main/resources/templates/repository-root.mustache
@@ -93,7 +93,7 @@
     <ul>
     {{#repositories}}
       <li>
-        <a href="{{url}}">{{name}}</a> (<a href="{{detailUrl}}">Details</a>, <a href="{{commitUrl}}">Commits</a>, <a href="{{sourceUrl}}">Source</a>)
+        <a href="{{url}}">{{name}}</a>
       </li>
     {{/repositories}}
     </ul>
