--- a/scm-ui/src/containers/App.css
+++ b/scm-ui/src/containers/App.css
@@ -13,9 +13,11 @@
   margin: 0 !important;
   padding: 0 0 0 3.8em !important; }
 
-html, body {
-  background-color: whitesmoke;
-  height: 100%; }
+.main {
+  min-height: calc(100vh - 260px); }
+
+.footer {
+  height: 50px; }
 
 /*! bulma.io v0.7.1 | MIT License | github.com/jgthms/bulma */
 @keyframes spinAround {
@@ -6437,3 +6439,9 @@ label.panel-block {
 .footer {
   background-color: #fafafa;
   padding: 3rem 1.5rem 6rem; }
+
+.box-link-shadow:hover, .box-link-shadow:focus {
+  box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1), 0 0 0 1px #33B2E8; }
+
+.box-link-shadow:active {
+  box-shadow: inset 0 1px 2px rgba(10, 10, 10, 0.2), 0 0 0 1px #33B2E8; }
